objects/REVVY__MnStrategy5__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_Quantity__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apply_Support_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Dollar__c</fullName>
        <label>Com $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Com %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DNet_Price_2__c</fullName>
        <description>DNet_Price_2 will be populated from within a trigger</description>
        <label>DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price__c</fullName>
        <label>DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store product name/description during support plus process</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Value_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Value Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Rebate_F__c</fullName>
        <formula>Product__r.Exclude_from_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXC RBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Award_Price__c</fullName>
        <label>EXT AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_DNet_Price__c</fullName>
        <label>EXT DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_MSRP_Price__c</fullName>
        <label>EXT MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <label>Setup Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freeze_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Percent__c</fullName>
        <label>GP %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Value__c</fullName>
        <label>GP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP_Price__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OnlyExistedInCPL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Award Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_MSRP_Price__c</fullName>
        <description>Store current year&apos;s MSRP price</description>
        <label>Original MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_off_MSRP__c</fullName>
        <label>Original % off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Off_MSRP__c</fullName>
        <description>Percent Off MSRP</description>
        <label>% Off MSRP</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_DNet__c</fullName>
        <description>Percent of DNet</description>
        <label>% of DNet</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlaceHolder1__c</fullName>
        <label>PlaceHolder1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder2__c</fullName>
        <label>Placeholder2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingMethodValue__c</fullName>
        <label>Pricing Method Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Program_Product_Type__c</fullName>
        <formula>Text(Product__r.Pricing_Program_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Program Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MODEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.REVVY__LocaleName_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DESCRIPTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Toro Quote Item Sub Lines</relationshipLabel>
        <relationshipName>Sub_Line_Extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Sub_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Item Sub Line</label>
        <referenceTo>REVVY__MnQuoteItemSubLine__c</referenceTo>
        <relationshipLabel>Subline Extension</relationshipLabel>
        <relationshipName>Subline_Extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_as_of_DNet__c</fullName>
        <description>Rebate as % of DNet</description>
        <label>RBT %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Original_Award_Price__c</fullName>
        <label>Support Plus Original Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Original_Price__c</fullName>
        <label>Support Plus Original Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Support Plus Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPP_DNET__c</fullName>
        <label>TPP DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TPP_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPP Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toro_DNet_Price__c</fullName>
        <label>EXT  DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_Price__c</fullName>
        <label>EXT AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Qty__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toro_Fee_Amount__c</fullName>
        <label>Setup Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Product_Tier__c</fullName>
        <formula>IF( ISBLANK(Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.Toro_Product_Tier__c), Toro_Quote_Item_2__r.Toro_Product_Tier__c, Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.Toro_Product_Tier__c)</formula>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_Quantity__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toro_Quote_Item_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Item</label>
        <referenceTo>REVVY__MnStrategy4__c</referenceTo>
        <relationshipLabel>Strategy 5</relationshipLabel>
        <relationshipName>Toro_Quote_Item_Sub_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toro_Subline_Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Award_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that Unit Award has been overridden by user</description>
        <label>Unit Award Overridden</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>